# token-usage-calculator

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  Recommendation_Engine_v2_Specification.md  compose.debug.yaml  compose.yaml  main.py  prompt-security-ca.crt  pyproject.toml  test_api.py
.claude/: settings.json
backend/api/: models_api.py  questionare_api.py  recommendation_api.py
backend/app/: data_preprocessing.py
backend/app/recommendation_engine/: input_schema.py  model_data_extractor.py  output_parser_fix.py  output_schema.py  output_schema_FINAL.py  prompt.py  recommendation_engine.py  tools_CREWAI.py
backend/app/scrapper/: input_schema.py  output_schema.py  prompt.py  scrapper.py  scrapper_2.py
backend/data/: llm_selection_questionnaire.json  llm_urls.json  model_catalog.json  questionnaire.json  questionnaire_v2.json
backend/processed_data/: list_model_ids.txt  openrouter_models.json  openrouter_models.xlsx
backend/sample_data/: sample_recommendation_output.json  sample_recommendation_output2.json
backend/scrapped_data/: anthropic.json  litellm_models.xlsx  openrouter.json  openrouter_models.xlsx
backend/utilites/: app_logger.py  llm_models.py
docs/: cloudflare-tunnel-setup.md  cloudfront_setup.md
scripts/: restart_docker.sh
