[project]
name = "token-usage-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[azure-ai-inference,google-genai]>=1.14.6",
    "crewai-tools>=1.14.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "uvicorn>=0.48.0",
    "requests>=2.32.0",
    "plotly>=5.24.0",
    "reportlab>=4.2.0",
    "azure-identity-broker>=1.3.0",
    "mangum>=0.21.0",
]
